<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swiperefresh"
    tools:context=".fragment.RandomActivityFragment">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/iv_link"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ImageView
        android:id="@+id/iv_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tv_activity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:textColor="@color/black"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/iv_link"
    android:text="@string/activity"
    />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/tv_accessibility"
        app:layout_constraintTop_toBottomOf="@+id/iv_link"
        android:text="---------"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_accessibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity"
        android:text="@string/accessibility"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/accessibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/tv_accessibility"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity"
        android:text="---------"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_accessibility"
        android:text="@string/participants"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/tv_accessibility"
        app:layout_constraintTop_toBottomOf="@+id/tv_accessibility"
        android:text="---------"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_participants"
        android:text="@string/type"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/tv_accessibility"
        app:layout_constraintTop_toBottomOf="@+id/tv_participants"
        android:text="---------"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_type"
        android:text="@string/price"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/tv_accessibility"
        app:layout_constraintTop_toBottomOf="@+id/tv_type"
        android:text="---------"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_seemoredetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:background="@color/color_primary"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/seemoredetails"
        app:layout_constraintTop_toBottomOf="@+id/tv_price"/>




</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>



</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>